Remove testing suffix.
Remove the .test suffix from the bin directory

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,9 +5,10 @@
     ~/.bin.Darwin: bin.Darwin/
     ~/.i3: i3/
 
+# Create a symlink to the correct bin directory
 - shell:
-  - rm ~/bin.test
-  - ln -s ~/.bin.`uname` ~/bin.test
+  - rm ~/bin
+  - ln -s ~/.bin.`uname` ~/bin  
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
