--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -3,11 +3,12 @@
 - link:
     ~/.dotfiles: ''
     ~/.bin.Darwin: bin.Darwin/
+    ~/.bin.Linux:  bin.Linux/
     ~/.i3: i3/
 
 # Create a symlink to the correct bin directory
 - shell:
-  - rm ~/bin
+  - rm -f ~/bin
   - ln -s ~/.bin.`uname` ~/bin  
 
 - shell:
