--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,6 +5,7 @@
     ~/.gitconfig:  gitconfig
     ~/.i3: i3/
     ~/.screenrc: screenrc
+    ~/.wallpapers: wallpapers
     ~/.zpretzo: zpretzo/
     ~/.zlogout: zprezto/runcoms/zlogout
     ~/.zpreztorc: zprezto/runcoms/zpreztorc
