--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,5 +1,10 @@
 - clean: ['~', '~/.config']
 
+- shell:
+  - [mkdir -p ~/bin]
+  - [mkdir -p ~/.ssh]
+  - [mkdir ~/.config]
+
 - link:
     ~/.dotfiles: ''
     ~/.gitconfig:  gitconfig
@@ -12,6 +17,10 @@
     ~/.zprofile: zprezto/runcoms/zprofile
     ~/.zshenv: zprezto/runcoms/zshenv
     ~/.zshrc: zprezto/runcoms/zshrc
+
+# Stuff for my bin directory
+- link:
+    ~/bin/cpplint.py: bin/cpplint.py
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
