Added new zshrc

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -16,7 +16,8 @@
     ~/.zpreztorc: zprezto/runcoms/zpreztorc
     ~/.zprofile: zprezto/runcoms/zprofile
     ~/.zshenv: zprezto/runcoms/zshenv
-    ~/.zshrc: zprezto/runcoms/zshrc
+    #~/.zshrc: zprezto/runcoms/zshrc
+    ~/.zshrc: zshrc
 
 # Stuff for my bin directory
 - link:
