Corrected syntax and comment out zprezto stuff

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,5 +1,4 @@
-- clean: 
-['~', '~/.config']
+- clean: ['~', '~/.config']
 
 - shell:
   - [mkdir -p ~/bin]
@@ -12,17 +11,16 @@
     ~/.i3: i3/
     ~/.screenrc: screenrc
     ~/.wallpapers: wallpapers
-    #~/.zshrc: zshrc
+#~/.zshrc: zshrc
 
 # zprezto setup
-- link:
-    ~/.zprezto: zprezto/
-    ~/.zlogout: zprezto/runcoms/zlogout
-    ~/.zpreztorc: zprezto/runcoms/zpreztorc
-    ~/.zprofile: zprezto/runcoms/zprofile
-    ~/.zshenv: zprezto/runcoms/zshenv
-    ~/.zshrc: zprezto/runcoms/zshrc
-
+#- link:
+#    ~/.zprezto: zprezto/
+#    ~/.zlogout: zprezto/runcoms/zlogout 
+#    ~/.zpreztorc: zprezto/runcoms/zpreztorc
+#    ~/.zprofile: zprezto/runcoms/zprofile
+#    ~/.zshenv: zprezto/runcoms/zshenv
+#    ~/.zshrc: zprezto/runcoms/zshrc
 
 # Stuff for my bin directory
 - link:
