Updated paths to zsh/prezto config files.

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -18,11 +18,11 @@
 # zprezto setup
 - link:
     ~/.zprezto: prezto/
-#    ~/.zlogout: zprezto/runcoms/zlogout 
-#    ~/.zpreztorc: zprezto/runcoms/zpreztorc
-#    ~/.zprofile: zprezto/runcoms/zprofile
-#    ~/.zshenv: zprezto/runcoms/zshenv
-#    ~/.zshrc: zprezto/runcoms/zshrc
+    ~/.zlogout: prezto/runcoms/zlogout 
+    ~/.zpreztorc: prezto/runcoms/zpreztorc
+    ~/.zprofile: prezto/runcoms/zprofile
+    ~/.zshenv: prezto/runcoms/zshenv
+    ~/.zshrc: prezto/runcoms/zshrc
 
 # Stuff for my bin directory
 - link:
