Adding some icons

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "prezto"]
 	path = zprezto
 	url = https://github.com/stuartcampbell/prezto.git
+[submodule "local/share/icons/numix-icon-theme-bevel"]
+	path = local/share/icons/numix-icon-theme-bevel
+	url = https://github.com/numixproject/numix-icon-theme-bevel.git
