Added fonts and tidied up

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -33,13 +33,24 @@
 
 # Themes and pretty stuff...
 - shell:
+  - [mkdir -p ~/.local/share/fonts]
   - [mkdir -p ~/.local/share/icons]
-  - [mkdir -p ~/.local/share/plank]
+  - [mkdir -p ~/.local/share/plank/themes]
 - link:
     ~/.local/share/icons/Numix-Bevel: local/share/icons/Numix-Bevel/
-    ~/.local/share/icons/hicolor: local/share/icons/hicolor/
-    ~/.local/share/plank/themes: local/share/plank/themes/
+#    ~/.local/share/icons/hicolor: local/share/icons/hicolor/
+    ~/.local/share/plank/themes/Numix: local/share/plank/themes/Numix/
+    ~/.local/share/plank/themes/Numix: local/share/plank/themes/Arc-Plank/
     ~/.wallpapers: wallpapers
+
+### Fonts ###
+- shell:
+  - [mkdir -p ~/.local/share/fonts]
+- link:
+    ~/.local/share/fonts/Hack-Bold.ttf: fonts/Hack/Hack-Bold.ttf    
+    ~/.local/share/fonts/Hack-BoldOblique.ttf: fonts/Hack/Hack-BoldOblique.ttf
+    ~/.local/share/fonts/Hack-Regular.ttf: fonts/Hack/Hack-Regular.ttf
+    ~/.local/share/fonts/Hack-RegularOblique.ttf: fonts/Hack/Hack-RegularOblique.ttf
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
