--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "prezto"]
 	path = zprezto
 	url = https://github.com/stuartcampbell/prezto.git
+[submodule "local/share/icons/Vertex"]
+	path = local/share/icons/Vertex
+	url = https://github.com/horst3180/Vertex-Icons.git
