Added bash_functions link

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,6 +13,7 @@
     ~/.dotfiles: ''
     ~/.bashrc: bashrc
     ~/.bash_aliases: bash_aliases
+    ~/.bash_functions: bash_functions
     ~/.bash_paths: bash_paths
     ~/.config/powerline:  config/powerline/
     ~/.devscripts: devscripts
