--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "local/share/icons/Vertex"]
 	path = local/share/icons/Vertex
 	url = https://github.com/horst3180/Vertex-Icons.git
+[submodule "oh-my-zsh"]
+	path = oh-my-zsh
+	url = https://github.com/robbyrussell/oh-my-zsh.git
