Moved antigen git repo into zsh subdirectory
Mainly done to cleanup top level.

--- a/.gitmodules
+++ b/.gitmodules
@@ -14,5 +14,5 @@
 	path = autoenv
 	url = git://github.com/kennethreitz/autoenv.git
 [submodule "antigen"]
-	path = antigen
+	path = zsh/antigen
 	url = https://github.com/zsh-users/antigen.git
