Allow ~/.zsh to be cleaned

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,7 +1,7 @@
 - clean: ['~', '~/.config', '~/.local']
 - clean: ['~/.local/share/plank']
 - clean: ['~/.local/share/icons']
-
+- clean: ['~/.zsh']
 
 - shell:
   - [mkdir -p ~/bin]
