Added tmux configs

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -22,6 +22,8 @@
     ~/.i3: i3/
     ~/.rpmmacros: rpmmacros
     ~/.screenrc: screenrc
+    ~/.tmux: tmux/
+    ~/.tmux.conf: tmux.conf
     ~/.vimrc: vimrc
 
 
