--- a/.gitmodules
+++ b/.gitmodules
@@ -2,7 +2,7 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 [submodule "prezto"]
-	path = zprezto
+	path = prezto
 	url = https://github.com/stuartcampbell/prezto.git
 [submodule "local/share/icons/Vertex"]
 	path = local/share/icons/Vertex
