--- a/i3/config
+++ b/i3/config
@@ -102,7 +102,7 @@ bindsym $mod+a focus parent
   set $workspace6  "6: "
   set $workspace7  "7: "
   set $workspace8  "8: "
-  set $workspace9  "9: "
+  set $workspace9  "9: "
   set $workspace10 "10: "
 
 # switch to workspace
@@ -129,6 +129,8 @@ bindsym $mod+a focus parent
   bindsym $mod+Shift+9 move container to workspace $workspace9
   bindsym $mod+Shift+0 move container to workspace $workspace10
 
+
+assign [class="Slack"] $workspace9
 assign [class="Rhythmbox"] $workspace10
 
 
@@ -213,6 +215,7 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightne
   exec --no-startup-id synergy
   exec --no-startup-id dunst
   exec compton -f
+  exec --no-startup-id slack
 
 # statler
 #exec_always xrandr --output DVI-I-1 --off --output DVI-I-0 --off --output DP-3 --mode 2560x1440 --pos 2560x0 --rotate normal --output DP-2 --mode 2560x1440 --pos 0x0 --rotate normal --output DP-1 --off --output DP-0 --off
