--- a/i3/config
+++ b/i3/config
@@ -42,7 +42,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+Shift+q kill
 
 # start rofi (a program launcher)
-bindsym $mod+d exec rofi -show run 
+bindsym $mod+d exec rofi -show run
 
 # change focus
 bindsym $mod+j focus left
@@ -94,10 +94,10 @@ bindsym $mod+a focus parent
 # focus the child container
 #bindsym $mod+d focus child
 
-  set $workspace1  "1: "
+  set $workspace1  "1: "
   set $workspace2  "2: "
-  set $workspace3  "3: "
-  set $workspace4  "4: "
+  set $workspace3  "3: "
+  set $workspace4  "4: "
   set $workspace5  "5: "
   set $workspace6  "6: "
   set $workspace7  "7: "
@@ -129,9 +129,13 @@ bindsym $mod+a focus parent
   bindsym $mod+Shift+9 move container to workspace $workspace9
   bindsym $mod+Shift+0 move container to workspace $workspace10
 
+# Assign particular workspace to a screen
+  workspace $workspace9 output DP-3
 
-assign [class="Slack"] $workspace9
-assign [class="Rhythmbox"] $workspace10
+# Assign applications to particular workspaces
+  assign [class="Thunderbird"] $workspace1
+  assign [class="Slack"] $workspace9
+  assign [class="Rhythmbox"] $workspace10
 
 
 # reload the configuration file
@@ -183,6 +187,7 @@ bindsym $mod+r mode "  "
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+        tray_output primary
         status_command i3status
 }
 
@@ -217,6 +222,6 @@ bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightne
   #exec compton -f
   exec --no-startup-id slack
 
-# statler
+# Set Primary display on STATLER
+exec_always xrandr --output DP-2 --primary
 #exec_always xrandr --output DVI-I-1 --off --output DVI-I-0 --off --output DP-3 --mode 2560x1440 --pos 2560x0 --rotate normal --output DP-2 --mode 2560x1440 --pos 0x0 --rotate normal --output DP-1 --off --output DP-0 --off
-
