Added xinitrc and make it start i3

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,6 +24,7 @@
     ~/.tmux: tmux/
     ~/.tmux.conf: tmux.conf
     ~/.vimrc: vimrc
+    ~/.xinitrc: xinitrc
     ~/.Xresources: Xresources
 
 # zsh setup
