Comment out autoenv

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -9,7 +9,7 @@
 
 - link:
     ~/.dotfiles: ''
-    ~/.autoenv: autoenv/
+#    ~/.autoenv: autoenv/
     ~/.bashrc: bashrc
     ~/.bash-git-prompt: bash-git-prompt/
     ~/.bash_aliases: bash_aliases
