--- a/.gitmodules
+++ b/.gitmodules
@@ -12,7 +12,7 @@
 	url = https://github.com/robbyrussell/oh-my-zsh.git
 [submodule "autoenv"]
 	path = autoenv
-	url = git://github.com/kennethreitz/autoenv.git
+	url = https://github.com/kennethreitz/autoenv.git
 [submodule "antigen"]
 	path = antigen
 	url = https://github.com/zsh-users/antigen.git
